syntax = "proto3";
option go_package = "github.com/MindHunter86/aniliSeeder/swarm/grpc";

package grpc;

import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";

service MinionService {
}

service MasterService {
    rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty) {}
    rpc Register (RegistrationRequest) returns (RegistrationReply) {}
    rpc GetTasks(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

message RegistrationRequest {
    // initial phase
    string WorkerVersion = 1;
    uint64 WDFreeSpace = 2;

    // registration phase
    repeated google.protobuf.Struct Torrent = 3;
}

message RegistrationReply {
    // setup phase
    google.protobuf.Struct Config = 2;
}
